tests/baselines/reference/esDecorators-classExpression-missingEmitHelpers-classDecorator.2.errors.txt
main.ts(4,18): error TS2343: This syntax requires an imported helper named '__esDecorate' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
main.ts(4,18): error TS2343: This syntax requires an imported helper named '__runInitializers' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.


==== main.ts (2 errors) ====
    declare var dec: any;
    
    // uses: __esDecorate, __runInitializers
    export const C = @dec class C {};
                     ~~~~
!!! error TS2343: This syntax requires an imported helper named '__esDecorate' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
                     ~~~~
!!! error TS2343: This syntax requires an imported helper named '__runInitializers' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
    
==== tslib.d.ts (0 errors) ====
    export {}
    